Add the Segoe Fluent Icons icon set

--- a/Source/IconManager.csproj
+++ b/Source/IconManager.csproj
@@ -6,13 +6,23 @@
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Data\FluentSystemIcons-Filled.json" />
+    <None Remove="Data\FluentSystemIcons-Filled.ttf" />
     <None Remove="Data\FluentSystemIcons-Regular.json" />
+    <None Remove="Data\FluentSystemIcons-Regular.ttf" />
+    <None Remove="Data\SegoeFluentIcons.json" />
     <None Remove="Data\SegoeMDL2Assets.json" />
+    <None Remove="Data\Symbols.json" />
+    <None Remove="Data\Symbols.ttf" />
   </ItemGroup>
   <ItemGroup>
     <AvaloniaResource Include="Data\FluentSystemIcons-Filled.json" />
+    <AvaloniaResource Include="Data\FluentSystemIcons-Filled.ttf" />
     <AvaloniaResource Include="Data\FluentSystemIcons-Regular.json" />
+    <AvaloniaResource Include="Data\FluentSystemIcons-Regular.ttf" />
+    <AvaloniaResource Include="Data\SegoeFluentIcons.json" />
     <AvaloniaResource Include="Data\SegoeMDL2Assets.json" />
+    <AvaloniaResource Include="Data\Symbols.json" />
+    <AvaloniaResource Include="Data\Symbols.ttf" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="0.10.3" />
