--- a/Source/IconManager.csproj
+++ b/Source/IconManager.csproj
@@ -9,6 +9,10 @@
     <None Remove="Data\FluentSystemIcons-Filled.ttf" />
     <None Remove="Data\FluentSystemIcons-Regular.json" />
     <None Remove="Data\FluentSystemIcons-Regular.ttf" />
+    <None Remove="Data\LineAwesome\la-brands-400.ttf" />
+    <None Remove="Data\LineAwesome\la-regular-400.ttf" />
+    <None Remove="Data\LineAwesome\la-solid-900.ttf" />
+    <None Remove="Data\LineAwesome\line-awesome.css" />
     <None Remove="Data\Mappings\Example.json" />
     <None Remove="Data\Mappings\FluentUISystemToSegoeMDL2Assets.json" />
     <None Remove="Data\Mappings\SegoeFluent.json" />
@@ -23,6 +27,10 @@
     <AvaloniaResource Include="Data\FluentSystemIcons-Filled.ttf" />
     <AvaloniaResource Include="Data\FluentSystemIcons-Regular.json" />
     <AvaloniaResource Include="Data\FluentSystemIcons-Regular.ttf" />
+    <AvaloniaResource Include="Data\LineAwesome\la-brands-400.ttf" />
+    <AvaloniaResource Include="Data\LineAwesome\la-regular-400.ttf" />
+    <AvaloniaResource Include="Data\LineAwesome\la-solid-900.ttf" />
+    <AvaloniaResource Include="Data\LineAwesome\line-awesome.css" />
     <AvaloniaResource Include="Data\Mappings\Example.json" />
     <AvaloniaResource Include="Data\Mappings\FluentUISystemToSegoeMDL2Assets.json" />
     <AvaloniaResource Include="Data\Mappings\SegoeFluent.json" />
