Add the Line Awesome icon set

--- a/Source/IconManager.csproj
+++ b/Source/IconManager.csproj
@@ -10,10 +10,14 @@
     <None Remove="Data\FluentUISystem\FluentSystemIcons-Regular.json" />
     <None Remove="Data\FluentUISystem\FluentSystemIcons-Regular.ttf" />
     <None Remove="Data\FluentUISystem\FluentUISystemGlyphSources.json" />
+    <None Remove="Data\LineAwesome\la-brands-400.json" />
     <None Remove="Data\LineAwesome\la-brands-400.ttf" />
+    <None Remove="Data\LineAwesome\la-regular-400.json" />
     <None Remove="Data\LineAwesome\la-regular-400.ttf" />
+    <None Remove="Data\LineAwesome\la-solid-900.json" />
     <None Remove="Data\LineAwesome\la-solid-900.ttf" />
     <None Remove="Data\LineAwesome\line-awesome.css" />
+    <None Remove="Data\LineAwesome\LineAwesomeGlyphSources.json" />
     <None Remove="Data\Mappings\Example.json" />
     <None Remove="Data\Mappings\FluentUISystemToSegoeMDL2Assets.json" />
     <None Remove="Data\Mappings\SegoeFluent.json" />
@@ -28,10 +32,14 @@
     <AvaloniaResource Include="Data\FluentUISystem\FluentSystemIcons-Regular.json" />
     <AvaloniaResource Include="Data\FluentUISystem\FluentSystemIcons-Regular.ttf" />
     <AvaloniaResource Include="Data\FluentUISystem\FluentUISystemGlyphSources.json" />
+    <AvaloniaResource Include="Data\LineAwesome\la-brands-400.json" />
     <AvaloniaResource Include="Data\LineAwesome\la-brands-400.ttf" />
+    <AvaloniaResource Include="Data\LineAwesome\la-regular-400.json" />
     <AvaloniaResource Include="Data\LineAwesome\la-regular-400.ttf" />
+    <AvaloniaResource Include="Data\LineAwesome\la-solid-900.json" />
     <AvaloniaResource Include="Data\LineAwesome\la-solid-900.ttf" />
     <AvaloniaResource Include="Data\LineAwesome\line-awesome.css" />
+    <AvaloniaResource Include="Data\LineAwesome\LineAwesomeGlyphSources.json" />
     <AvaloniaResource Include="Data\Mappings\Example.json" />
     <AvaloniaResource Include="Data\Mappings\FluentUISystemToSegoeMDL2Assets.json" />
     <AvaloniaResource Include="Data\Mappings\SegoeFluent.json" />
