--- a/Source/IconManager.csproj
+++ b/Source/IconManager.csproj
@@ -57,11 +57,11 @@
     <AvaloniaResource Include="Data\WinJSSymbols\Symbols.ttf" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="0.10.10" />
-    <PackageReference Include="Avalonia.Desktop" Version="0.10.10" />
-    <PackageReference Include="Avalonia.Diagnostics" Version="0.10.10" />
+    <PackageReference Include="Avalonia" Version="0.10.999-cibuild0018535-beta" />
+    <PackageReference Include="Avalonia.Desktop" Version="0.10.999-cibuild0018535-beta" />
+    <PackageReference Include="Avalonia.Diagnostics" Version="0.10.13" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="SkiaSharp" Version="2.80.3" />
+    <PackageReference Include="SkiaSharp" Version="2.88.0-preview.209" />
     <PackageReference Include="SkiaSharp.Svg" Version="1.60.0" />
     <PackageReference Include="XamlNameReferenceGenerator" Version="1.3.4" />
    </ItemGroup>
