--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "LineAwesome"]
 	path = Resources/LineAwesome
 	url = https://github.com/icons8/line-awesome
+[submodule "Resources/LineAwesome"]
+	path = Resources/LineAwesome
+	url = https://github.com/icons8/line-awesome
