Add FluentUISystem submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "LineAwesome"]
-	path = Resources/LineAwesome
-	url = https://github.com/icons8/line-awesome
+[submodule "Resources/FluentUISystem"]
+	path = Resources/FluentUISystem
+	url = https://github.com/microsoft/fluentui-system-icons
 [submodule "Resources/LineAwesome"]
 	path = Resources/LineAwesome
 	url = https://github.com/icons8/line-awesome
