--- a/Source/IconManager.csproj
+++ b/Source/IconManager.csproj
@@ -62,6 +62,7 @@
     <PackageReference Include="Avalonia.Desktop" Version="11.0.0-preview1" />
     <PackageReference Include="Avalonia.Diagnostics" Version="11.0.0-preview1" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.0-preview1" />
+    <PackageReference Include="FluentAvaloniaUI" Version="2.0.0-preview1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="SkiaSharp" Version="2.88.2" />
     <PackageReference Include="SkiaSharp.Svg" Version="1.60.0" />
